# PaddleOCR

./: README.md  detect.py  main.py  train.py
config/: ppocr_cls.yaml  ppocr_det.yaml  ppocr_mb.yaml  ppocr_rec.yaml  ppocr_v2_rec.yaml
dataset/: __init__.py  simple_dataset.py
dataset/augment/: __init__.py  east_process.py  label_ops.py  make_boarder_map.py  make_border_map.py  make_shrink_map.py  maskgrid.py  operators.py
deploy/ppocr_ncnn/: CMakeLists.txt  main.cpp  ppocr.cpp  ppocr.h  ppocr_cls.cpp  ppocr_cls.h  ppocr_det.cpp  ppocr_det.h  ppocr_rec.cpp  ppocr_rec.h
deploy/ppocr_ncnn/include/: db_postprocess.h  ppocr.h  ppocr_base.h  ppocr_det.h  ppocr_rec.h
deploy/ppocr_ncnn/ncnn/: ppocr_cls.param  ppocr_det.param  ppocr_rec.param
deploy/ppocr_ncnn/src/: db_postprecess.cpp  ppocr.cpp  ppocr_base.cpp  ppocr_cls.cpp  ppocr_det.cpp  ppocr_rec.cpp
model/arch/: __init__.py  base_model.py
model/backbones/: __init__.py  det_mbnetv3.py  mobilenet_v3.py  rec_mbnetv3.py  rec_mv1_enhance.py  rec_resnet_vd.py
model/heads/: __init__.py  cls_head.py  ctc_head.py  db_head.py
model/losses/: __init__.py  basic_loss.py  db_loss.py  rec_ctc_loss.py
model/metrics/: det_metric.py  eval_det_iou.py
model/necks/: __init__.py  db_fpn.py  rnn.py
model/postprocess/: __init__.py  cls_postprocess.py  db_postprocess.py  rec_postprocess.py
model/trainer/: trainer.py
scripts/: cvt2ncnn.sh
utils/: convet2pt.py  export_onnx.py  logging.py  tools.py
weights/: ch_PP-OCRv2_det_distill_train.pt  ch_ppocr_mobile_v2.0_cls_train.pt  ch_ppocr_mobile_v2.0_det_train.pt
